argocd/kustomize/kube-prometheus/example-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  labels:
    app: alertmanager
spec:
  type: NodePort
  ports:
  - name: web
    protocol: TCP
    port: 9093
    targetPort: 9093
  selector:
    app.kubernetes.io/name: alertmanager
    alertmanager: alertmanager
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  type: NodePort
  ports:
  - name: http-web
    protocol: TCP
    port: 9090
    targetPort: 9090
  selector:
    app.kubernetes.io/name: prometheus
    prometheus: prometheus
